fix typo on CLOUDINARY_API_KEY

--- a/config/cloudinary.yml
+++ b/config/cloudinary.yml
@@ -1,6 +1,6 @@
 default: &default
   cloud_name: <%= ENV['CLOUDINARY_CLOUD_NAME'] %>
-  api_key: <%= ENV['CLOUDINARY_API_SECRET'] %>
+  api_key: <%= ENV['CLOUDINARY_API_KEY'] %>
   api_secret: <%= ENV['CLOUDINARY_API_SECRET'] %>
   enhance_image_tag: true
 
